finish analysis of the data

--- a/notebooks/prototyping.ipynb
+++ b/notebooks/prototyping.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will use the Kolmogorov-Arnold Network as model for the classification for learning purposes "
+    "I will use the Kolmogorov-Arnold Network as model for the classification for learning purposes   \n",
+    "- https://github.com/mintisan/awesome-kan\n",
+    "- https://kindxiaoming.github.io/pykan/intro.html"
    ]
   },
   {
