--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -20,14 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd \n",
-    "import os\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
     "from sklearn.preprocessing import LabelEncoder, OrdinalEncoder\n"
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,11 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "numeric_columns = train_data.select_dtypes(include=[np.number])\n",
     "categorical_columns = train_data.select_dtypes(exclude=[np.number])"
    ]
@@ -150,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +227,7 @@
        "4                  RENT     MEDICAL          C                         Y"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +257,7 @@
        "['G', 'F', 'E', 'D', 'C', 'B', 'A']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -340,6 +338,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
        "      <th>cb_person_default_on_file_encoded</th>\n",
        "      <th>loan_grade_encoded</th>\n",
        "      <th>person_home_ownership_encoded</th>\n",
@@ -349,6 +351,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Y</td>\n",
        "      <td>1</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3</td>\n",
@@ -356,6 +362,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>OWN</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "      <td>N</td>\n",
        "      <td>0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>2</td>\n",
@@ -363,6 +373,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>N</td>\n",
        "      <td>0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0</td>\n",
@@ -370,6 +384,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>N</td>\n",
        "      <td>0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3</td>\n",
@@ -377,6 +395,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Y</td>\n",
        "      <td>1</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3</td>\n",
@@ -388,9 +410,17 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32576</th>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>N</td>\n",
        "      <td>0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0</td>\n",
@@ -398,6 +428,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32577</th>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>A</td>\n",
+       "      <td>N</td>\n",
        "      <td>0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0</td>\n",
@@ -405,6 +439,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32578</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>HOMEIMPROVEMENT</td>\n",
+       "      <td>B</td>\n",
+       "      <td>N</td>\n",
        "      <td>0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>3</td>\n",
@@ -412,6 +450,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32579</th>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>PERSONAL</td>\n",
+       "      <td>B</td>\n",
+       "      <td>N</td>\n",
        "      <td>0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0</td>\n",
@@ -419,6 +461,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32580</th>\n",
+       "      <td>RENT</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>B</td>\n",
+       "      <td>N</td>\n",
        "      <td>0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>3</td>\n",
@@ -426,40 +472,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32581 rows × 4 columns</p>\n",
+       "<p>32581 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       cb_person_default_on_file_encoded  loan_grade_encoded  \\\n",
-       "0                                      1                 3.0   \n",
-       "1                                      0                 5.0   \n",
-       "2                                      0                 4.0   \n",
-       "3                                      0                 4.0   \n",
-       "4                                      1                 4.0   \n",
-       "...                                  ...                 ...   \n",
-       "32576                                  0                 4.0   \n",
-       "32577                                  0                 6.0   \n",
-       "32578                                  0                 5.0   \n",
-       "32579                                  0                 5.0   \n",
-       "32580                                  0                 5.0   \n",
+       "      person_home_ownership      loan_intent loan_grade  \\\n",
+       "0                      RENT         PERSONAL          D   \n",
+       "1                       OWN        EDUCATION          B   \n",
+       "2                  MORTGAGE          MEDICAL          C   \n",
+       "3                      RENT          MEDICAL          C   \n",
+       "4                      RENT          MEDICAL          C   \n",
+       "...                     ...              ...        ...   \n",
+       "32576              MORTGAGE         PERSONAL          C   \n",
+       "32577              MORTGAGE         PERSONAL          A   \n",
+       "32578                  RENT  HOMEIMPROVEMENT          B   \n",
+       "32579              MORTGAGE         PERSONAL          B   \n",
+       "32580                  RENT          MEDICAL          B   \n",
        "\n",
-       "       person_home_ownership_encoded  loan_intent_encoded  \n",
-       "0                                  3                    4  \n",
-       "1                                  2                    1  \n",
-       "2                                  0                    3  \n",
-       "3                                  3                    3  \n",
-       "4                                  3                    3  \n",
-       "...                              ...                  ...  \n",
-       "32576                              0                    4  \n",
-       "32577                              0                    4  \n",
-       "32578                              3                    2  \n",
-       "32579                              0                    4  \n",
-       "32580                              3                    3  \n",
+       "      cb_person_default_on_file  cb_person_default_on_file_encoded  \\\n",
+       "0                             Y                                  1   \n",
+       "1                             N                                  0   \n",
+       "2                             N                                  0   \n",
+       "3                             N                                  0   \n",
+       "4                             Y                                  1   \n",
+       "...                         ...                                ...   \n",
+       "32576                         N                                  0   \n",
+       "32577                         N                                  0   \n",
+       "32578                         N                                  0   \n",
+       "32579                         N                                  0   \n",
+       "32580                         N                                  0   \n",
        "\n",
-       "[32581 rows x 4 columns]"
+       "       loan_grade_encoded  person_home_ownership_encoded  loan_intent_encoded  \n",
+       "0                     3.0                              3                    4  \n",
+       "1                     5.0                              2                    1  \n",
+       "2                     4.0                              0                    3  \n",
+       "3                     4.0                              3                    3  \n",
+       "4                     4.0                              3                    3  \n",
+       "...                   ...                            ...                  ...  \n",
+       "32576                 4.0                              0                    4  \n",
+       "32577                 6.0                              0                    4  \n",
+       "32578                 5.0                              3                    2  \n",
+       "32579                 5.0                              0                    4  \n",
+       "32580                 5.0                              3                    3  \n",
+       "\n",
+       "[32581 rows x 8 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +682,7 @@
        "[32581 rows x 4 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +968,7 @@
        "[32581 rows x 12 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1135,7 @@
        "4                              3                    3  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1216,7 @@
        "4            1"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1238,7 @@
        "((26064, 11), (6517, 11), (26064, 1), (6517, 1))"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
